2011-07-28  Benjamin Mack  <benni@typo3.org>

	* Sitemap: Fixed small visibility for class property
	* Sitemap: Fixed double http:// in Sitemap URLs (Thanks to Oliver Rompcik)

2011-07-13  Benjamin Mack  <benni@typo3.org>

	* Fixed dependency to RealURL in the info module (Thanks to Robert Heel)

2011-07-08  Benjamin Mack  <benni@typo3.org>

	* Release of seo_basics 0.8.0
	* Improvements to the canonical tag
 	* Improvements to the sitemap and multi-domain setup
	* Fixed ext_tables.sql (Thanks to Marcel Zweifel)

2011-04-16  Benjamin Mack  <benni@typo3.org>

	* Added the canonical tag functionality.

2010-01-15  Benjamin Mack  <benni@typo3.org>

	* Release of seo_basics 0.7.0
	* Breaking change: The seo_basics metatags and sitemap TypoScript is now in a static_template and needs to be added manually through Web=>Template=>Edit the whole template record! (Thanks to Michael Cannon)
	* TYPO3 4.3: Title-Tag is now found in the tab "Metadata" on each page
	* Title-Tag: Changed titletag DB field from varchar() to tinytext (Thanks to Michael Cannon)
	* Title-Tag: Changed titletag maximum length to 70 characters (Thanks to Michael Cannon)
	* Title-Tag / Keyword module: Changed coloring of keywords (less than 3 keywords make it yellow) (Thanks to Michael Cannon)

2010-01-14  Benjamin Mack  <benni@typo3.org>

	* Source formatter: Fixed indention when having textarea elements on a page (Thanks to Sven Burkert for reporting this issue)
	* Sitemap: Fixed validation error when using tidy or source formatters (Thanks to Andreas Dörler for reporting this issue)
	* Sitemap: Fixed compatibility issue with RealURL when having domain string pointers in a configuration (Thanks to Steffen Gebert and Ingmar Schlecht)

2008-09-19  Benjamin Mack  <benni@typo3.org>

	* Release of seo_basics 0.6.0
	* Sitemap: Links are now generated by typolink (better for coolURI)
	* Sitemap: Only generates non-hidden pages now (taking starttime and endttime into account) Thanks to Morten Kjems