@@ -1,5 +1,7 @@
 2011-07-28  Benjamin Mack  <benni@typo3.org>
 
+	* Sitemap: Support for multiple languages / different sitemaps (Thanks to Benjamin Bergmann)
+	* Sitemap: Fixed problem with subpages of sysfolders (Thanks to Benjamin Bergmann)
 	* Sitemap: Fixed small visibility for class property
 	* Sitemap: Fixed double http:// in Sitemap URLs (Thanks to Oliver Rompcik)
 
